Fix user-feed loading on mobile

--- a/src/app/components/view-profile/view-profile.component.css
+++ b/src/app/components/view-profile/view-profile.component.css
@@ -54,9 +54,9 @@ body {
 }
 }
 @media  (max-width: 600px)  {
-  .display{
+  /* .display{
     display: none;
-  }
+  } */
 
   .mobile {
     width: 100%;
